# MRTools

./: .gitignore  build.py  pyproject.toml  test.py
condaenv/: INSTALL.md  env-dev.yaml  env-my-base.yaml  pkgs-dev.txt
examples/: example01.py  example01.yaml  example02.py  example_clicklog.py
examples/samples/: CompressedStop.yaml  Samples_Autumn18.yaml  Samples_Fall17.yaml  Samples_Summer16.yaml
src/cxx/: CMakeLists.txt  DeltaR.cxx  HelloWorld.cxx  LinkDef.h
src/cxx/include/MRTools/: DeltaR.hxx  HelloWorld.hxx
src/mrtools/: __init__.py  analyzer.py  clicklog.py  commands.py  config.py  db.py  exceptions.py  mrtools.toml  samples.py  samples_cache.py  singleton.py  utils.py
src/mrtools/cxx/: CMakeLists.txt  DeltaR.cxx
src/mrtools/include/MRTools/: DeltaR.hxx  Hepers.hxx
tests/: test_clicklog.py  test_config.py  test_mrtools.py  test_samples.py  test_singleton.py  test_utils.py
try/: try_click.py  try_dict.py  try_getentries01.py
